--- a/css/style.scss
+++ b/css/style.scss
@@ -1,51 +1,8 @@
 @import 'normalize';
+@import 'variables';
+@import 'header';
 
 body{
   font-family: 'Anonymous Pro', ;
   font-size: 10px;
-}
-
-header{
-  background: url('../images/bg.jpg') no-repeat;
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-h1{
-  text-align: center;
-  font-family: 'Abril Fatface';
-  letter-spacing: 4px;
-  margin-top: 0;
-  font-size: 5rem;
-}
-
-input{
-  background: white;
-  border: none;
-  color: black;
-}
-
-button{
-  color:black;
-  background: #1abc9c;
-  border: none;
-  margin-top: 50px;
-  font-size: 1.5rem;
-  padding: 2% 5%;
-  margin: 0 2%;
-  
-}
-
-button:hover{
-  background: #fa8072;
-}
-
-header div{
-  display: flex;
-  flex-direction: row;
 }
