--- a/css/_maps.scss
+++ b/css/_maps.scss
@@ -1,7 +1,7 @@
 #map-canvas {
   padding: 0.5em 0;
   overflow: hidden;
-  height: 30rem; 
+  height: 30rem;
   width: 70%;
   margin: 0;
   display:inline-block;
@@ -16,4 +16,8 @@
 
 #location-names p {
   margin:0;
+}
+
+.venueListItem{
+  border: $teal 1px solid;
 }
