--- a/css/_maps.scss
+++ b/css/_maps.scss
@@ -11,22 +11,34 @@
   }
   
   #location-names {
-    width:27%;
+    width:28.5%;
     display:inline-block;
     vertical-align:top;
     font-size:2rem;
-    margin: 0 1%;
-  }
-  
-  #location-names p {
-    margin:0 0 2% 0;
-    font-size: 1rem;
+    margin: 0 0 0 1%;
+    overflow-y: scroll;
+    max-height: 100vh;
+    
+    p {
+      margin:0;
+      font-size: 1rem;
+    }
   }
   
   .venueListItem{
     border-bottom: $teal 1px solid;
+    min-height: 100px;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    
     
     h4{
+      margin:0;
       margin-bottom: 1%;
       font-size: 1.5rem;
     }
