made map section responsive

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -105,13 +105,13 @@ header{
       text-align: center;
     }
     
-    // button,
-    // a,
-    // .getLocation{
-    //   margin: 0;
-    //   margin-bottom: 5%;
-    //   width: 13rem;
-    //   padding:0;
-    // }
+    button,
+    a,
+    .getLocation{
+      margin: 0;
+      margin-bottom: 5%;
+      width: 13rem;
+      padding:0;
+    }
   }
 }
