added vendor prefixes to header section

--- a/css/_maps.scss
+++ b/css/_maps.scss
@@ -71,7 +71,7 @@
     -ms-justify-content:center;
     -o-justify-content:center;
     justify-content: center;
-    -webkit-justify-content:center;
+    -webkit-flex-direction:row;
     -moz-flex-direction:row;
     -ms-flex-direction:row;
     -o-flex-direction:row;
