--- a/css/_header.scss
+++ b/css/_header.scss
@@ -3,14 +3,33 @@ header{
   background-position: center;
   background-size: cover;
   height: 100vh;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
   display: flex;
+  -webkit-justify-content:center;
+  -moz-justify-content:center;
+  -ms-justify-content:center;
+  -o-justify-content:center;
   justify-content: center;
+  -webkit-align-items:center;
+  -moz-align-items:center;
+  -ms-align-items:center;
+  -o-align-items:center;
   align-items: center;
+  -webkit-flex-direction:column;
+  -moz-flex-direction:column;
+  -ms-flex-direction:column;
+  -o-flex-direction:column;
   flex-direction: column;
   
-  
   h1{
-    text-align: center;
+    -webkit-align-items:center;
+    -moz-align-items:center;
+    -ms-align-items:center;
+    -o-align-items:center;
+    align-items: center;
     font-family: 'Abril Fatface';
     letter-spacing: 10px;
     margin: 0;
@@ -66,7 +85,15 @@ header{
   }
   
   div{
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
     display: flex;
+    -webkit-flex-direction:row;
+    -moz-flex-direction:row;
+    -ms-flex-direction:row;
+    -o-flex-direction:row;
     flex-direction: row;
   }
   .getLocation{
@@ -101,17 +128,24 @@ header{
     }
     
     div{
+      -webkit-flex-direction:column;
+      -moz-flex-direction:column;
+      -ms-flex-direction:column;
+      -o-flex-direction:column;
       flex-direction: column;
-      text-align: center;
-    }
-    
-    button,
-    a,
-    .getLocation{
-      margin: 0;
-      margin-bottom: 5%;
-      width: 13rem;
-      padding:0;
+      -webkit-align-items:center;
+      -moz-align-items:center;
+      -ms-align-items:center;
+      -o-align-items:center;
+      align-items: center;    }
+      
+      button,
+      a,
+      .getLocation{
+        margin: 0;
+        margin-bottom: 5%;
+        width: 13rem;
+        padding:0;
+      }
     }
   }
-}
